# CDXMCPFix

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md
.codex-plugin/: plugin.json
.github/workflows/: release-assets.yml
docs/: roadmap.md  v2-command-guard.md  v3-fleet-view.md
docs/examples/: codex-command-guard-hooks.json
schemas/: cdxcore.diagnostics.v1.schema.json
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
tests/: guard_hook_cli.rs  setup_cli.rs
