[package]
name = "cdxcore"
version = "0.1.0"
edition = "2021"
description = "Read-only MCP startup and configuration diagnostics for Codex."
license = "MIT"
repository = "https://github.com/ikhdark/CDXCore"
homepage = "https://github.com/ikhdark/CDXCore"
readme = "README.md"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/.mcp.json",
    "/.codex-plugin/plugin.json",
    "/docs/**/*.md",
    "/schemas/**/*.json",
    "/src/**/*.rs",
]

[[bin]]
name = "cdxcore"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "1.7.0", default-features = false, features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
